--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="section_format">Hello World from section: %1$d</string>
     <string name="book_list">List of Books</string>
     <string name="cart">Cart</string>
+    <string name="price">%1$d €</string>
 </resources>
